--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ a:link {
 }
 .title{
     height: auto;
-    background-image:url(/images/Layer\ 66.png);
+    background-image:url(/images/bg\ .png),url(/images/Layer\ 66.png);
     background-repeat:no-repeat;
 }
 .flex-nav{
