--- a/style.css
+++ b/style.css
@@ -130,8 +130,8 @@ a:link {
     height:800px;
     background-image:linear-gradient(rgba(30,30,30,0.9),rgba(30,30,30,0.9)),url(/images/background_layer.png);
     width: auto;
-    background-size: cover;
-    background-repeat:no-repeat;
+    background-size: cover, cover;
+    background-repeat:no-repeat, no-repeat;
 }
 .flex-nav{
     height: 7.150153217568948vh;
