--- a/style.css
+++ b/style.css
@@ -127,10 +127,10 @@ a:link {
     font-size: 0.813rem;   
 }
 .title{
-    height:800px;
+    height:800px, 800px;
     background-image:linear-gradient(rgba(30,30,30,0.9),rgba(30,30,30,0.9)),url(/images/background_layer.png);
-    width: auto;
-    background-size: cover, cover;
+    width: auto, auto;
+    background-size: cover, ;
     background-repeat:no-repeat, no-repeat;
 }
 .flex-nav{
