--- a/style.css
+++ b/style.css
@@ -88,9 +88,14 @@ li{
 }
 
 .background{
-    width: 100%;
-    height: 800px;
+    min-width: 100%;
+    min-height: 800px;
     margin: 0 auto;
+    padding: 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
+    background-position: center;
     background-image:linear-gradient(rgba(30,30,30,0.8),rgba(30,30,30,0.8)),url(/images/background_layer.png);
 }
 .navbar{
@@ -102,7 +107,11 @@ li{
 }
 .logo h1{
     color: white;
-    letter-spacing: 0.1rem;
+    letter-spacing: 1px;
+}
+.logo{
+    line-height: 50px;
+    padding-bottom: 6px;
 }
 .nav-left a{
     color: white;
@@ -139,7 +148,7 @@ li{
 .nav-right i{
     margin-top: 8px;
     color:white;
-    font-size: 17px;
+    font-size: 18px;
 }
 .v-sep1,.v-sep2{
     width: 1px;
@@ -169,25 +178,121 @@ li{
 .center-items{
     display: flex;
     flex-direction: column;
-    height: 50%;
-    background-color: aquamarine;
-    width: auto;
-    justify-content: space-between;
+    height: 60%;
+    padding-top: 200px;
+    width:840px;
+    justify-content: center;
+    
+}
+.center-items p{
+    font-size: 42px;
+    font-weight: 900;
+    padding-top:13px;
+    letter-spacing: 1px;
+    text-align: center;
+    
+}
+.center-items h1{
+    font-size: 20px;
+    color: #bdbebe;
+    font-weight: 400;
+}
+.center-items button{
+    background-color: #303f9f;
+    align-self: center;
+    width: 170px;
+    height: 45px;
+    cursor: pointer;
+    margin-top: 30px;
+    border-radius: 25px;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+
 }
 .profile{
+    padding-top: 8px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 1px solid blue;
-    background-color: blue;
-    width:auto;
-    height: 50%;
-    /* margin-top:200px; */
+    width:1170px;
+    height: 40%;
 }
 .profile img{
     align-self: center;
-    border-radius: 50%;
+    border-radius: 100%;
+    margin-bottom:15px ;
+    width: 50px;
+    height: 50px;
+}
+.profile h6{
+    font-weight: 100;
+    font-size: 12px;
+    margin-top: 10px;
+}
+.profile h5{
+    margin-top:7px;
+    letter-spacing: 1px;
 }
 #comment-likes{
     display: flex;
+    width: 100%;
+    margin-top: 12px;
+    padding-top: 10px;
+    font-size: 13px;
+    font-weight: 500;
+    color: #bdbebe;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+}
+#comment-likes div{
+    font-size: 12px;
+    padding: 0 15px;
+}
+#comment-likes span{
+    font-size: 15px;
+    padding: 0 7px;
+}
+
+main{
+    width: 100vw;
+    height: 100vh;
+    background-color: #f5f5f5;
+}
+
+.main-nav{
+    width: 100%;
+    height: 61px;
+    background-color: #ffff;
+    border-bottom: 1px solid #dddd;
+}
+main .container{
+    background-color: lightcoral;
+    height: 61px;
+}
+.sort-blog{
+    display: flex;
+}
+.sort-blog ul{
+    display: flex;
+}
+.sort-blog a{
+    font-size: 14px;
+}
+.sort-blog h5{
+    border: 1px solid red;
+    padding-top:5px;
+    letter-spacing: 1px;
+}
+.sort-blog button{
+    margin: 0 15px;
+    background-color: #f5f5f5;
+    border-radius: 50px;
+    height: 30px;
+    width: 100px;
+}
+.sort-blog li:nth-child(1) > button{
+    width: 80px;
 }
