--- a/style.css
+++ b/style.css
@@ -269,7 +269,6 @@ main{
     border-bottom: 1px solid #dddd;
 }
 main .container{
-    background-color: lightcoral;
     height: 61px;
 }
 .sort-blog{
@@ -278,21 +277,48 @@ main .container{
 .sort-blog ul{
     display: flex;
 }
-.sort-blog a{
-    font-size: 14px;
-}
 .sort-blog h5{
-    border: 1px solid red;
-    padding-top:5px;
-    letter-spacing: 1px;
+    padding-top:8px;
+    font-size: 11px;
+    color: #212121;
 }
 .sort-blog button{
     margin: 0 15px;
     background-color: #f5f5f5;
     border-radius: 50px;
     height: 30px;
-    width: 100px;
+    width: auto;
+    font-size: 11px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.sort-blog #selected{
+    background-color: #ffff;
+    border: 1px solid rgb(63,81,181);
 }
 .sort-blog li:nth-child(1) > button{
     width: 80px;
+    margin: 0px 15px 0px 20px;
+}
+
+.sort-blog li:nth-child(2) > button{
+    width: 150px;
+    margin: 0px 15px 0px 0px;
+}
+.sort-blog li:nth-child(3) > button{
+    width: 120px;
+    margin: 0px 15px 0px 0px;
+}
+.sort-blog li:nth-child(4) > button{
+    width: 80px;
+    margin: 0px 15px 0px 0px;
+}
+.sort-blog li:nth-child(5) > button{
+    width: 130px;
+    margin: 0px 15px 0px 0px;
+}
+.sort-blog button:hover{
+    background-color: darkgray;
+    border: 1px solid grey;
 }
