--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ li{
     margin: 0 auto;
     padding: 0;
     width: auto;
-    background-image:linear-gradient(rgba(30,30,30,0.8),rgba(30,30,30,0.8)),url(/images/background_layer.png);
+    background-image:linear-gradient(rgba(30,30,30,0.8),rgba(30,30,30,0.8)),url(./images/background_layer.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
