--- a/style.css
+++ b/style.css
@@ -324,39 +324,32 @@ main .container{
     border: 1px solid grey;
 }
 .main-content{
-    width: 100vw;
-    height: 2309px;
-    display: grid;
-}
-.main-content{
     width: 100%;
-    height: 2309px;
+    height: 2337px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #f5f5f5;
+}
+.gap{
+    background-color: #f5f5f5;
+    width: 100%;
+    height: 30px;
 }
 .grid-container{
     width: 1170px;
     height: 100%;
-    border: 1px solid salmon;
-    display: grid;
-    grid-template-columns: 820px 310px;
-    grid-template-rows:1fr;
-    grid-column-gap:40px;
-    padding-top: 30px;
-}
-.grid1{
     background-color: #f5f5f5;
-    width: 100%;
+    display: grid; 
+    grid-template-columns: 820px 310px;
+    grid-column-gap:40px;
 }
-.grid2{
-    background-color: #ffff;
+.grid-1{
+    background-color: #303f9f;
+    display: grid;
 
 }
-.grid-row-span2{
-    grid-row: span 2;
-}
-.btn-more{
-    background-color: lightgoldenrodyellow;
-    height: 120px;
+.grid-2{
+    background-color: yellowgreen;
 }
