--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@ a{
 li{
     list-style: none;
 }
+.material-symbols-rounded {
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+  }
 /* --------------------------- */
 
 .main-container{
@@ -69,21 +76,28 @@ li{
     display: flex;
 }
 .top-right .sign a{
-    font-size: 12px;
+    font-size: 11.5px;
+    margin-right: 3.5px;
+    letter-spacing: 0.5px;
 }
 .top-right .lang a{
-    font-size: 12px;
-}
+    font-size: 11.5px;
+s}
 .top-right .fa-solid{
     font-size: 15px;
     margin:0 4px;
 }
 .lang .fa-angle-down{
     margin-right: 0;
+    font-size: 12px;
+}
+.lang .fa-globe{
+    margin-right: 7px;
 }
 .v-sep{
     background-color: rgb(92,92,91);
     width: 1px;
+    height: 20px;
     margin: 0 12px;
 }
 
@@ -150,6 +164,25 @@ li{
     color:white;
     font-size: 18px;
 }
+.nav-right .search{
+    font-size: 16px;
+    margin-left: 6px;
+}
+.nav-right .heart{
+    margin-top: 6px;
+    margin-right: 7px;
+    font-size: 20px;
+}
+.nav-right span{
+    color: white;
+    margin-top: 4px;
+}
+.v-sep1{
+    margin-left: 2px;
+}
+.v-sep2{
+    margin-left:-5px;
+}
 .v-sep1,.v-sep2{
     width: 1px;
     background-color: rgb(92,92,91);
@@ -186,9 +219,11 @@ li{
 }
 .center-items p{
     font-size: 42px;
+    letter-spacing: 0.8px;
     font-weight: 900;
-    padding-top:13px;
-    letter-spacing: 1px;
+    line-height: 50px;
+    padding-top:15px;
+    padding-left: 5px;
     text-align: center;
     
 }
@@ -217,29 +252,42 @@ li{
     flex-direction: column;
     justify-content: center;
     width:1170px;
-    height: 40%;
+    height: auto;
 }
 .profile img{
     align-self: center;
     border-radius: 100%;
-    margin-bottom:15px ;
-    width: auto
-    height: auto;
+    width:50px;
+    height:50px;
+    transform: scale(1.2);
 }
-.profile h6{
-    font-weight: 100;
-    font-size: 12px;
-    margin-top: 10px;
+.profile-img{
+
+    width: 50px;
+    height: 50px;
+    align-self: center;
+    overflow: hidden;
+    border-radius: 100%;
+
 }
 .profile h5{
-    margin-top:7px;
     letter-spacing: 1px;
+    margin-bottom: 11px;
+    margin-top: 20px;
 }
+.profile h6{
+    font-weight: 400;
+    color: rgb(125, 124, 126);
+    font-size: 12px;
+    margin-right: 5px;
+    margin-bottom: 15px;
+}
+
 #comment-likes{
     display: flex;
     width: 100%;
-    margin-top: 12px;
-    padding-top: 10px;
+    margin-bottom: 50px;
+    padding-right: 10px;
     font-size: 13px;
     font-weight: 500;
     color: #bdbebe;
@@ -255,6 +303,7 @@ li{
     font-size: 15px;
     padding: 0 7px;
 }
+
 
 main{
     width: 100vw;
@@ -327,29 +376,43 @@ main .container{
     width: 100%;
     height: 2337px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #f5f5f5;
-}
-.gap{
-    background-color: #f5f5f5;
-    width: 100%;
-    height: 30px;
 }
 .grid-container{
+    padding-top: 30px;
     width: 1170px;
     height: 100%;
     background-color: #f5f5f5;
-    display: grid; 
+    display: grid;
     grid-template-columns: 820px 310px;
+    grid-template-rows: 2187px;
     grid-column-gap:40px;
 }
 .grid-1{
-    background-color: #303f9f;
-    display: grid;
-
+    background-color: #f5f5f5;
 }
 .grid-2{
-    background-color: yellowgreen;
+    background-color: darkturquoise;
+    grid-row: span 2;
+
+}
+.btn-more{
+    background-color: violet;
+}
+.grid-1-container{
+    display: grid;
+    background-color: #303f9f;
+    grid-template-columns: repeat(1,1fr);
+    grid-template-rows: repeat(2,1fr);
+    height: 100%;
+    
+}
+#grid-1-1{
+    width: 100%;
+    height: 620px;
+    background-color: red;
+}
+#grid-1-2{
+
 }
