--- a/style.css
+++ b/style.css
@@ -386,7 +386,7 @@ main .container{
     background-color: #f5f5f5;
     display: grid;
     grid-template-columns: 820px 310px;
-    grid-template-rows: 2187px;
+    grid-template-rows: 2187px 127px; 
     grid-column-gap:40px;
 }
 .grid-1{
@@ -398,21 +398,73 @@ main .container{
 
 }
 .btn-more{
-    background-color: violet;
+    /* background-color: rgb(175, 10, 98); */
 }
 .grid-1-container{
     display: grid;
-    background-color: #303f9f;
-    grid-template-columns: repeat(1,1fr);
-    grid-template-rows: repeat(2,1fr);
+    /* background-color: #303f9f; */
+    grid-template-columns:260px 120px 120px 260px;
+    grid-template-rows:620px 165px 165px 165px 420px 540px;
+    grid-gap: 20px;
     height: 100%;
-    
+}
+.grid-1-items{
+    border-radius:7px;
+    box-shadow: 0px 3px 2px #e1e1e1;
 }
 #grid-1-1{
-    width: 100%;
-    height: 620px;
-    background-color: red;
+    background-color: chocolate;
+    grid-column: 1/-1;
 }
 #grid-1-2{
-
+    background-color: olivedrab;
+    grid-column: 1/-1;
+}
+#grid-1-3{
+    background-color: mediumseagreen;
+    grid-column: 1/-1;
+}
+#grid-1-4{
+    background-color: mediumvioletred;
+    grid-column: 1/-1;
+}
+#grid-1-5{background-color: orchid;}
+#grid-1-6{
+    background-color: lightcoral;
+    grid-column: 2/4;
+}
+#grid-1-7{background-color: burlywood;}
+#grid-1-8{
+    background-color: slateblue;
+    grid-column: 1/3;
+}
+#grid-1-9{
+    background-color: crimson;
+    grid-column: 3/5;    
+}
+.item-1-container{
+    display: flex;
+    flex-direction: column;
+}
+.bg-item-1{
+    background-image: url(./images/Layer-1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 420px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.bg-item-1 div:nth-child(2){
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 20px;
+    color: white;
+}
+.bg-item-1 div:nth-child(1){
+    margin-top: 180px;
+    font-size: 55px;
 }
