--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;900&display=swap');
+
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    border: 0;
+}
+*::after,*::before{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     border: 0;
 }
 body{
@@ -77,7 +84,7 @@ li{
 }
 .top-right .sign a{
     font-size: 11.5px;
-    margin-right: 3.5px;
+    margin-right: 2.5px;
     letter-spacing: 0.5px;
 }
 .top-right .lang a{
@@ -98,7 +105,7 @@ s}
     background-color: rgb(92,92,91);
     width: 1px;
     height: 20px;
-    margin: 0 12px;
+    margin: 1px 13px 0 12px;
 }
 
 .background{
@@ -121,7 +128,8 @@ s}
 }
 .logo h1{
     color: white;
-    letter-spacing: 1px;
+    letter-spacing: 1.2px;
+    margin-left: -4px;
 }
 .logo{
     line-height: 50px;
@@ -146,12 +154,36 @@ s}
 }
 .nav-left ul li a{
     display: flex;
+    position: relative;
     flex-wrap: nowrap;
     padding: 0 14px; 
-    align-self: center;   
+    align-self: center;    
 }
+.nav-left ul li:nth-child(1){
+    padding-left: 5px;
+}
+.nav-left ul li a::after{
+    content: '';
+    position: absolute;
+    background-color: #ff4081;
+    height: 4px;
+    top: 35px;
+    width: 0;
+    left: 50%;
+    transition: 0.3s ease-out;
+
+}
+.nav-left ul li a:hover::after{
+    content: '';
+    width: 100%;
+    left: 0;
+    
+}
+
 .nav-left .fa-solid{
-    margin-left:8px;
+    margin-left:10px;
+    margin-top: 2px;
+    font-size: 12px;
     color: white;
 }
 .nav-right ul{
@@ -178,10 +210,12 @@ s}
     margin-top: 4px;
 }
 .v-sep1{
-    margin-left: 2px;
+    margin-left: 1px;
+    margin-top: 1px;
 }
 .v-sep2{
-    margin-left:-5px;
+    margin-top: 1px;
+    margin-left:-10px;
 }
 .v-sep1,.v-sep2{
     width: 1px;
@@ -219,7 +253,7 @@ s}
 }
 .center-items p{
     font-size: 42px;
-    letter-spacing: 0.8px;
+    letter-spacing: 0.9px;
     font-weight: 900;
     line-height: 50px;
     padding-top:15px;
@@ -230,7 +264,7 @@ s}
 .center-items h1{
     font-size: 20px;
     color: #bdbebe;
-    font-weight: 400;
+    font-weight: 500;
 }
 .center-items button{
     background-color: #303f9f;
@@ -238,12 +272,13 @@ s}
     width: 170px;
     height: 45px;
     cursor: pointer;
-    margin-top: 30px;
+    margin-top: 32px;
     border-radius: 25px;
     color: white;
     font-size: 16px;
     font-weight: 600;
     letter-spacing: 1px;
+    word-spacing:0.5px;
 
 }
 .profile{
@@ -259,50 +294,78 @@ s}
     border-radius: 100%;
     width:50px;
     height:50px;
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 .profile-img{
-
     width: 50px;
+    margin-top: 10px;
     height: 50px;
     align-self: center;
     overflow: hidden;
     border-radius: 100%;
+}
+.img-profile{
+    display: flex;
+    margin-top: 10px;
+    margin-right: 5px;
+    justify-content: center;
+    width: 100px;
+    align-self: center;
+    padding-bottom: 4px;
 
 }
 .profile h5{
     letter-spacing: 1px;
-    margin-bottom: 11px;
-    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-top: 13px;
+
 }
 .profile h6{
-    font-weight: 400;
-    color: rgb(125, 124, 126);
+    font-weight: 500;
+    color: #9c9c9c;
     font-size: 12px;
     margin-right: 5px;
     margin-bottom: 15px;
+    letter-spacing: 0.6px;
 }
 
 #comment-likes{
     display: flex;
     width: 100%;
+    letter-spacing: 0.5px;
     margin-bottom: 50px;
     padding-right: 10px;
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 500;
     color: #bdbebe;
     justify-content: center;
     align-items: center;
     height: 50px;
+    /* border: 1px solid red; */
 }
-#comment-likes div{
-    font-size: 12px;
-    padding: 0 15px;
+.comment,.likes{
+    /* border: 0.1px solid red; */
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-#comment-likes span{
-    font-size: 15px;
-    padding: 0 7px;
+.comment{
+    margin-left: 5px;
 }
+.likes{
+    /* padding-left: 10px; */
+    margin-left: 28px;
+}
+#comment{
+    font-size: 16px;
+    margin-right: 5px;
+}
+#likes{
+    font-size: 16px;
+    margin-right:5px;
+}
+
 
 
 main{
@@ -413,7 +476,6 @@ main .container{
     box-shadow: 0px 3px 2px #e1e1e1;
 }
 #grid-1-1{
-    background-color: chocolate;
     grid-column: 1/-1;
 }
 #grid-1-2{
@@ -445,6 +507,9 @@ main .container{
 .item-1-container{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
+
 }
 .bg-item-1{
     background-image: url(./images/Layer-1.png);
@@ -456,15 +521,60 @@ main .container{
     justify-content: space-between;
     align-items: center;
 }
-.bg-item-1 div:nth-child(2){
+.bg-item-1 .inner-bg{
     display: flex;
     width: 100%;
-    justify-content: flex-end;
+    justify-content:space-between;
     align-items: center;
     margin-bottom: 20px;
     color: white;
 }
-.bg-item-1 div:nth-child(1){
+.inner-bg{
+    margin-top:150px;
+    width: 100%;
+    height: 100%;
+}
+.inner-bg span{
+    margin: 0 5px;
+    font-size: 16px;
+}
+.inner-bg div{
+    display: flex;
+    font-size: 13px;
+
+}
+.inner-bg h6{
+    margin-left: 20px;
+    font-size: 10.5px;
+    margin-top: 5px;
+    font-weight: 500;
+    letter-spacing: 0.7px;
+}
+.question-ans{
+    margin:0 6px 0 6px;
+    padding:0 10px 0 5px;
+    width: 100%;
+}
+.like{
+    margin:0 10px 0 0;
+    padding:0 10px 0 0;
+    width: 100%;
+}
+.question-ans,.like{
+    margin-top: 5px;
+}
+.bg-item-1 div:nth-child(1) i{
     margin-top: 180px;
-    font-size: 55px;
+    font-size: 53px;
+    color: white;
+}
+.grid-1-sentence{
+    border: 0.2px solid red;
+    line-height: 1.7;
+    padding-top: 15px;
+    padding-left: 14px;
+    letter-spacing: 0.5px;
+    word-spacing: 1px;
+    font-size: 15px;
+
 }
