--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing:border-box;
     font-family: 'Montserrat', sans-serif;
     border: 0;
 }
@@ -20,7 +20,10 @@ a{
     text-decoration: none;  
 }
 
-
+hr{
+    height: 1px; 
+    background-color:#e0e0e0;
+}
 li{
     list-style: none;
 }
@@ -29,6 +32,20 @@ li{
     'FILL' 1,
     'wght' 400,
     'GRAD' 0,
+    'opsz' 48
+  }
+#more-1{
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 200,
+  'GRAD' 200,
+  'opsz' 48
+}
+#more-2{
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 200,
+    'GRAD' 200,
     'opsz' 48
   }
 /* --------------------------- */
@@ -252,6 +269,8 @@ s}
     
 }
 .center-items p{
+    /* width: 100%;
+    height: auto; */
     font-size: 42px;
     letter-spacing: 0.9px;
     font-weight: 900;
@@ -390,9 +409,10 @@ main .container{
     display: flex;
 }
 .sort-blog h5{
-    padding-top:8px;
-    margin-right: 5px;
+    padding-top:8.5px;
+    margin-right: 2px;
     font-size: 11px;
+    word-spacing: 3px;
     color:#212121
 }
 .sort-blog button{
@@ -439,12 +459,14 @@ main .container{
     width: 100%;
     height: 2337px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
 }
 .grid-container{
     padding-top: 30px;
-    width: 1170px;
+    /* width: 1545px; */
+    width: 100%;
+    margin-left: 375px;
     height: 100%;
     background-color: #f5f5f5;
     display: grid;
@@ -456,53 +478,120 @@ main .container{
     background-color: #f5f5f5;
 }
 .grid-2{
-    background-color: darkturquoise;
+    display: flex;
+    background-color: #ffff;
+    flex-direction: column;
+    width: 100%;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius:5px;
+    align-items: flex-end;
     grid-row: span 2;
-
+    height: 2306px;
+}
+.blank-space{
+    background-color: white;
+    width:100%;
+    overflow: hidden;
+    height: 2306px;
+    margin-top: 30px;
 }
 .btn-more{
-    /* background-color: rgb(175, 10, 98); */
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 119px;
+}
+.btn-more a:visited, .btn-more a:link{
+    color:#ffff;
+}
+.btn-more a{
+    display: flex;
+    position: relative;
+}
+.more{
+    margin-right: -7px;
+    margin-bottom: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.btn-more h6{
+    color: #303f9f;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    margin-right: 3px;
+}
+#more-a>span{
+    border-radius: 100%;
+    font-size: 55px;
+}
+
+#more-a span:nth-of-type(1){
+    color: #303f9f;
+}
+#more-a span:nth-of-type(2){
+    position: absolute;
 }
 .grid-1-container{
     display: grid;
-    /* background-color: #303f9f; */
     grid-template-columns:260px 120px 120px 260px;
     grid-template-rows:620px 165px 165px 165px 420px 540px;
-    grid-gap: 20px;
+    grid-column-gap: 20px;
+    grid-row-gap: 21px;
     height: 100%;
 }
 .grid-1-items{
-    border-radius:7px;
-    box-shadow: 0px 3px 2px #e1e1e1;
+    border-radius:5px;
+    /* border: 0.5px solid #ebebeb; */
+    box-shadow: 0px 2px 3px #e1e1e1;
 }
 #grid-1-1{
     grid-column: 1/-1;
+    background-color: #ffff;
 }
 #grid-1-2{
-    background-color: olivedrab;
     grid-column: 1/-1;
+    background-color: #ffff;
 }
 #grid-1-3{
-    background-color: mediumseagreen;
+    background-color: #ffff;
     grid-column: 1/-1;
 }
 #grid-1-4{
-    background-color: mediumvioletred;
+    background-color: #ffff;
     grid-column: 1/-1;
+    position: relative;
+    bottom: 1px;
 }
-#grid-1-5{background-color: orchid;}
+#grid-1-5{
+    background-color: #ffff;
+    position: relative;
+    bottom: 1px;
+}
 #grid-1-6{
-    background-color: lightcoral;
+    background-color:#ffff;
     grid-column: 2/4;
+    position: relative;
+    bottom: 1px;
 }
-#grid-1-7{background-color: burlywood;}
+#grid-1-7{
+    background-color: #ffff;
+    position: relative;
+    bottom: 1px;
+}
 #grid-1-8{
-    background-color: slateblue;
+    background-color: #ffff;
     grid-column: 1/3;
+    position: relative;
+    bottom: 1px;
 }
 #grid-1-9{
-    background-color: crimson;
-    grid-column: 3/5;    
+    background-color: #ffff;
+    grid-column: 3/5;   
+    position: relative;
+    bottom: 1px; 
 }
 .item-1-container{
     display: flex;
@@ -512,43 +601,39 @@ main .container{
 
 }
 .bg-item-1{
-    background-image: url(./images/Layer-1.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 420px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    background-image:url(./images/Layer-1.png);
+    background-size:contain;
+    background-repeat:no-repeat;
+    position: relative;
+    height:420px;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
 }
-.bg-item-1 .inner-bg{
-    display: flex;
-    width: 100%;
+.inner-bg-1{
+    position: absolute;
+    bottom:15px;
+    display:flex;
+    width:100%;
     justify-content:space-between;
-    align-items: center;
-    margin-bottom: 20px;
-    color: white;
+    align-items:center;
+    color:white;
 }
-.inner-bg{
-    margin-top:150px;
-    width: 100%;
-    height: 100%;
+.inner-bg-1 span{
+    margin:0 5px;
+    font-size:16px;
 }
-.inner-bg span{
-    margin: 0 5px;
-    font-size: 16px;
+.inner-bg-1 div{
+    display:flex;
+    font-size:13px;
 }
-.inner-bg div{
-    display: flex;
-    font-size: 13px;
-
-}
-.inner-bg h6{
-    margin-left: 20px;
-    font-size: 10.5px;
-    margin-top: 5px;
-    font-weight: 500;
-    letter-spacing: 0.7px;
+.inner-bg-1 h6{
+    margin-left:20px;
+    font-size:10.5px;
+    /* margin-top:5px; */
+    font-weight:500;
+    letter-spacing:0.7px;
 }
 .question-ans{
     margin:0 6px 0 6px;
@@ -558,23 +643,408 @@ main .container{
 .like{
     margin:0 10px 0 0;
     padding:0 10px 0 0;
-    width: 100%;
+    width:100%;
 }
-.question-ans,.like{
-    margin-top: 5px;
-}
-.bg-item-1 div:nth-child(1) i{
-    margin-top: 180px;
-    font-size: 53px;
-    color: white;
+.bg-item-1 .play-btn-div i{
+    font-size:52px;
+    color:white;
 }
 .grid-1-sentence{
-    border: 0.2px solid red;
-    line-height: 1.7;
-    padding-top: 15px;
-    padding-left: 14px;
-    letter-spacing: 0.5px;
-    word-spacing: 1px;
-    font-size: 15px;
+    margin:11px 30px 13px 20px;
+    line-height:1.75;
+    display:flex;
+    flex-direction:column;
 
 }
+.grid-1-sentence h3{
+    font-size:18px;
+    letter-spacing:0.4px;
+    font-weight:bold;
+}
+.grid-1-sentence p{
+    font-family:'open sans' , sans-serif;
+    font-size:15.45px;
+    letter-spacing:1.2px;
+    text-align:left;
+    font-weight:100;
+    line-height:1.7;
+}
+.grid-1-profile{
+    display:flex;
+    margin: 20px 21px 20px 20px;
+}
+
+.grid-1-profile img{
+    margin-right:9px;
+    border-radius:100%;
+}
+.profile-details-1{
+    display:flex;
+    width:100%;
+}
+
+.profile-details-1 div>h5{
+    letter-spacing:0.5px;
+    margin-top:6px;
+    margin-left:2px;
+}
+.profile-details-1 div>h6{
+    letter-spacing:0.6px;
+    color:#878787;
+    font-weight:500;
+    font-size:12px;
+    margin-top:8px;
+}
+.profile-details-1 a{
+    align-self:center;
+    margin-left:auto;
+    font-size:20px;
+
+}
+.profile-details-1 a:visited{
+    color:black;
+}
+.item-container{
+    display:flex;
+    /* background-color: #9c9c9c; */
+    
+    width:100%;
+    height:100%;
+}
+.bg-item{
+    background-image: url(./images/layer-2.png);
+    height:100%;
+    background-repeat:no-repeat;
+    justify-content:center;
+    display:flex;
+    flex-direction:column;
+}
+.bg-item-2 > div:nth-of-type(1){
+    width:100%;
+    margin-top:auto;
+    padding-top:35px;
+    font-size:40px;
+    display:flex;
+    justify-content:center;
+}
+.bg-item-2 a:visited{
+    color:white;
+}
+.bg-item-2 a:link{
+    color:white;
+}
+
+.inner-bg{
+    display:flex;
+    margin-bottom:17px;
+    margin-top:auto;
+    width: 260px;
+    justify-content:space-between;
+    color:white;
+}
+.inner-bg div{
+    font-size:12px;
+    display:flex;
+}
+.inner-bg span{
+    font-size:16px;
+    padding:0 5px;
+    height:100%;
+}
+.inner-bg h6{
+    font-weight:500;
+    font-size:11px;
+    letter-spacing:0.4px;
+    padding-left:20px;
+    padding-top:3px;
+}
+.item-details h4{
+    margin-left:18px;
+    margin-top:10px;
+    letter-spacing: 0.5px;
+    margin-bottom:8px;
+}
+.item-details p{
+    margin-left:18px;
+    font-family:'open sans' , sans-serif;
+    font-size: 15px;
+    font-weight:100;
+    letter-spacing:0.5px;
+    word-spacing: 0.5px;
+    margin-bottom:15px;
+    text-align:justify;
+    line-height:1.4;
+    margin-right:21px;
+}
+.grid-profile{
+    margin-left:21px;
+    display:flex;
+    margin-top:10px;
+}
+.grid-image-profile img{
+    border-radius:100%;
+    width:50px;
+    height:50px;
+    transform:scale(1.25);
+}
+.grid-image-profile {
+    width:50px;
+    overflow:hidden;
+    height:50px;
+    border-radius:100%;
+}
+.profile-details{
+    display:flex;
+    flex-grow:1;
+}
+.profile-details a{
+
+    margin-left:auto;
+    margin-right:21px;
+    margin-top: 13px;
+    font-size:20px;
+    color:black;
+}
+.profile-details div{
+    margin-top:6.5px;
+    margin-left:10px;
+}
+.profile-details h5{
+    font-weight:500;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+}
+.profile-details h6{
+    color:#878787;
+    font-weight:500;
+    letter-spacing: 0.56px;
+    font-size: 12px;
+    margin-top:6px;
+}
+.bg-item-3{
+    background-image: linear-gradient(rgba(52, 52, 52, 0.2),rgb(52,52,52,0.2)) ,url(./images/Layer-3.png);
+    background-position:center;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius:5px;
+}
+.grid-3-image-profile img{
+    transform:scale(1.14);
+}
+.bg-item-4{
+    background-image:url(./images/Layer-4.png);
+    background-position:center;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius:5px;
+}
+.grid-4-image-profile img{
+    transform:scale(1.85);
+    margin-top: 10px;
+}
+.row-5-container{
+    flex-direction: column;
+    position: relative;
+}
+.bg-row-5{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 160px;
+    background-position: top left;
+    background-size: cover;
+    border-top-left-radius: 5px;
+    border-top-right-radius:5px ;
+    background-color: #212121;
+    background-image: url(./images/Layer-5.png);
+}
+.bg-row-5 .play-btn-div{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.bg-row-5 a{
+    font-size: 40px;
+    color: white;
+}
+.inner-bg-5{
+    position: absolute;
+    bottom: 10px;
+    margin-bottom: 0;
+}
+.inner-bg-5 h6{
+    padding-top:0;
+}
+.row-5-details h4{
+    margin-left:20px;
+    margin-top:10px;
+    font-size: 14px;
+    padding: 0;
+    line-height: 24px;
+}
+.row-5-details p{
+    word-spacing: 1px;
+    text-align: left;
+    letter-spacing: 0.6px;
+    margin-bottom:25px;
+}
+
+.grid-5-profile{
+    margin-top:16px;
+    margin-left: 19.7px;
+}
+.profile-details-5 div{
+    margin-top: 4px;
+}
+.profile-details-5 h6{
+    margin-top: 8px;
+}
+.profile-details-5 a{
+    margin-right: 19px;
+    margin-top: 21px;
+}
+.b-5-2{
+    background-image:url(./images/Layer-6.png);
+}
+.b-5-3{
+    background-image: url(./images/Layer-7.png);
+}
+.row-5-3-profile .grid-5-image-profile img{
+    transform: scale(1.8);
+    margin-top: 11.5px;
+}
+.arrows-aside{
+    position: relative;
+    width: 100%;
+    height:100%;
+}
+.arrows{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* flex-direction: column; */
+}
+.arrows-aside i{
+    font-size: 40px;
+}
+#arrow-left{
+    margin-left: 10px;
+}
+#arrow-right{
+    margin-right:10px;
+}
+.b-6-1{
+    background-image: url(./images/Layer-8.png);
+    height: 300px;
+    background-position: top left;
+
+}
+.b-6-2{
+    background-image:url(./images/Layer-9.png);
+    height: 300px;
+}
+.inner-bg-6-1,.inner-bg-6-2{
+    width: 100%;
+    margin-bottom: 6px;
+}
+
+.row-details-6-1 h4, .row-details-6-2 h4{
+    font-size: 18px;
+    margin-top: 13px;
+    margin-bottom: 6px;
+}
+.row-details-6-1 p, .row-details-6-2 p{
+    font-size: 16px;
+    margin-bottom:14px;
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    line-height: 1.6;
+    font-weight: 100;
+}
+.profile-details-6-1 a, .profile-details-6-2 a{
+    margin-right: 21px;
+    margin-top: 11px;
+}
+
+
+.aside{
+    border-radius: 5px;
+    width:272px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.aside-search{
+    width: 269px;
+    display: flex;
+    justify-content: flex-end;
+}
+.aside-search i{
+    color: white;
+    padding: 9.5px;
+    font-size: 16px;
+    margin-right: 5px;
+    border-radius: 50px;
+    background-color: #ff4081;
+}
+.aside-search button{
+    cursor: pointer;
+    background-color: #f5f5f5;
+    border-radius: 50px;
+}
+.aside-search{
+    height: 43px;
+    margin-top: 24px;
+    border-radius: 100px;
+    background-color: #f5f5f5;
+}
+#search{
+    display: flex;
+    justify-content:flex-end;
+    width:100%;
+}
+#search input{
+    background: transparent;
+    width: 210px;
+    border: 0;
+    outline: none;
+}
+#search input::placeholder{
+    font-size: 16px;
+    letter-spacing: 0.5px;
+}
+.categories{
+    width: 100%;
+    height: auto;
+    margin-top: 27px;
+}
+.categories h4{
+    border-bottom: 1px solid #aec3ff;
+    color: #303f9f;
+    font-size: 18px;
+    letter-spacing: 0.5px;
+    padding-bottom: 5px;
+}
+.cat-table{
+    margin-top: 2px;
+    display:flex;
+    flex-direction: column;
+}
+.cat-table h6{
+    font-size: 14px;
+    font-weight: 500;
+}
+.cat-table div{
+    border-bottom: 1px solid #ebeae9;
+    display: flex;
+    font-family:'open sans' , sans-serif;
+    justify-content: space-between;
+    padding: 10px 0;
+}
+.cat-table div:nth-child(5){
+    border-bottom: 0;
+}
+
